# to-do-concordium

./: .gitignore  Cargo.toml
src/: address.json  complete_task.json  lib.rs  new_task.json  new_task2.json  schema.json
