# [package]
# name = "to-do-ccd"
# version = "0.1.0"
# edition = "2021"

# [dependencies]


[package]
name = "to-do-ccd"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["onyekachi11 <emegwaonyeka@gmail.com>"]
description = "piggy contract"

[features]
default = ["std"]
std = ["concordium-std/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-std = { version = "10.0", default-features = false }

[dev-dependencies]
concordium-smart-contract-testing = "4.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
